--- a/config/locales/devise.views.ja.yml
+++ b/config/locales/devise.views.ja.yml
@@ -95,11 +95,11 @@ ja:
         are_you_sure: 本当によろしいですか？
         cancel_my_account: アカウント削除
         currently_waiting_confirmation_for_email: "%{email} の確認待ち"
-        leave_blank_if_you_don_t_want_to_change_it: 空欄のままなら変更しません
+        leave_blank_if_you_don_t_want_to_change_it: (空欄のままなら変更しません)
         title: "%{resource}編集"
         unhappy: 気に入りません
         update: 更新
-        we_need_your_current_password_to_confirm_your_changes: 変更を反映するには現在のパスワードを入力してください
+        we_need_your_current_password_to_confirm_your_changes: (変更を反映するには現在のパスワードを入力してください)
       new:
         sign_up: アカウント登録
       signed_up: アカウント登録が完了しました。
@@ -125,6 +125,9 @@ ja:
         sign_in_with_provider: "%{provider}でログイン"
         sign_up: アカウント登録
       minimum_password_length: "（%{count}字以上）"
+      words:
+        welcome: ご利用いただきありがとうございます。
+        hello: いつもご利用いただきありがとうございます。
     unlocks:
       new:
         resend_unlock_instructions: アカウントのロック解除方法を再送する
