文言を修正

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -9,7 +9,7 @@ ja:
         tablet: 錠剤
         powder: 粉類
         content_size: 内容量
-        daily_intake: 1日当たりの摂取量
+        daily_intake: 1日あたりの摂取量
         remaining_quantity: 残量
         empty_day: なくなる日
         remind: リマインド
